log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 05:59:32 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:15: error: invalid type argument of unary ‘*’ (have ‘int’)
   17 |   lista->data=*array[0];
      |               ^~~~~~~~~
Compilation failed
70205da
Thu 30 Mar 2023 05:59:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:14: error: assignment to ‘void **’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   17 |   lista->data=array[0];
      |              ^
arraylist.c:17:20: error: ‘*array’ is used uninitialized [-Werror=uninitialized]
   17 |   lista->data=array[0];
      |               ~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e10a2b1
Thu 30 Mar 2023 06:01:10 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
b6fefed
Thu 30 Mar 2023 06:07:28 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c155366
